--- a/index-id.html
+++ b/index-id.html
@@ -4,10 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CiwAI™ Smart Digital</title>
-  <link rel="icon" type="image/png" href="favicon.png" />
-  <meta name="description" content="CiwAI™ Smart Digital - Solusi Modern: Aplikasi, Web, VPS/VPN, Bot AI" />
-  
+
+  <title>CiwAI™ Smart Digital — Aplikasi, Web, VPS/VPN, Bot AI</title>
+  <meta name="description"
+    content="CiwAI™ Smart Digital — Teknologi pintar, ringan, dan ramah pengguna: Aplikasi Mobile, Desain Web, VPS/VPN, dan Bot AI." />
+  <link rel="canonical" href="https://ciwaidevtools.netlify.app/index-id.html" />
+  <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="CiwAI™ Smart Digital — Aplikasi, Web, VPS/VPN, Bot AI" />
+  <meta property="og:description"
+    content="Teknologi pintar, ringan, dan ramah pengguna untuk semua. Jelajahi aplikasi, website, VPS/VPN, dan bot AI kami." />
+  <meta property="og:image" content="https://ciwaidevtools.netlify.app/assets/images/logo_ciwai_512.webp" />
+  <meta property="og:url" content="https://ciwaidevtools.netlify.app/index-id.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="CiwAI™ Smart Digital — Aplikasi, Web, VPS/VPN, Bot AI" />
+  <meta name="twitter:description"
+    content="Teknologi pintar, ringan, dan ramah pengguna untuk semua. Jelajahi aplikasi, website, VPS/VPN, dan bot AI kami." />
+  <meta name="twitter:image" content="https://ciwaidevtools.netlify.app/assets/images/logo_ciwai_512.webp" />
+
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -20,10 +38,31 @@
       scroll-behavior: smooth;
     }
   </style>
+
+  <!-- Schema.org: Organization (CiwAI Smart Digital) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CiwAI™ Smart Digital",
+    "url": "https://ciwaidevtools.netlify.app/",
+    "logo": "https://ciwaidevtools.netlify.app/assets/images/logo_ciwai_512.webp",
+    "sameAs": [
+      "https://github.com/Ciwai-lab",
+      "https://instagram.com/",
+      "https://www.linkedin.com/"
+    ],
+    "contactPoint": [{
+      "@type": "ContactPoint",
+      "email": "ciwaismartdigital@gmail.com",
+      "contactType": "customer support",
+      "availableLanguage": ["Indonesian", "English"]
+    }]
+  }
+  </script>
 </head>
 
-<body
-  class="flex flex-col min-h-screen bg-gradient-to-b from-sky-50 via-white to-white text-gray-900 font-sans scroll-smooth">
+<body class="flex flex-col min-h-screen bg-gradient-to-b from-sky-50 via-white to-white text-gray-900 font-sans">
 
   <!-- Pilihan Bahasa -->
   <div class="absolute top-4 right-4 text-sm space-x-2 z-50">
@@ -35,24 +74,34 @@
   </div>
 
   <!-- Hero -->
-  <section id="home" class="pt-10 pb-14 flex flex-col justify-center items-center text-center px-6 bg-gradient-to-b from-gray-50 to-white">
-    <img src="logo_ai.png" alt="Logo WaaAi" class="w-52 md:w-64 lg:w-72 mb-6 drop-shadow-xl" data-aos="fade-down" />
+  <section id="home" class="pt-24 pb-32 flex flex-col justify-center items-center text-center px-6">
+    <img src="assets/images/logo_ciwai_512.webp" alt="Logo CiwAI Smart Digital"
+      class="w-40 md:w-48 lg:w-52 mb-6 drop-shadow-xl" data-aos="fade-down" />
     <h1 class="text-4xl md:text-6xl font-bold mb-4 max-w-2xl" data-aos="fade-up">
       CiwAI™ Smart Digital
     </h1>
     <p class="text-lg md:text-xl max-w-xl mb-6 text-gray-600" data-aos="fade-up" data-aos-delay="100">
       Menyederhanakan teknologi modern untuk semua orang — Aplikasi Mobile, Desain Web, VPS/VPN, dan Chatbot AI.
     </p>
+
     <!-- Tombol Aksi -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-xl mx-auto mt-6">
-      </a>
-      <a href="#projects"
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 max-w-4xl mx-auto mt-6"> <a href="#projects"
         class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition text-center">
-        Lihat Project
+        Lihat Proyek
       </a>
       <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
-        class="px-6 py-3 bg-rose-400 text-white rounded-xl shadow-md hover:bg-rose-500 transition text-center">
+        rel="noopener noreferrer"
+        class="px-6 py-3 bg-rose-500 text-white rounded-xl shadow-md hover:bg-rose-600 transition text-center">
         Play Store
+      </a>
+      <a href="/support" target="_blank" rel="noopener noreferrer"
+        class="px-6 py-3 bg-green-600 text-white rounded-xl shadow-md hover:bg-green-600 transition text-center">
+        Dukungan
+      </a>
+
+      <a href="/updates.html" target="_blank" rel="noopener noreferrer"
+        class="px-6 py-3 bg-yellow-600 text-white rounded-xl shadow-md hover:bg-yellow-600 transition text-center">
+        Pembaruan
       </a>
     </div>
   </section>
@@ -61,25 +110,21 @@
   <section id="about" class="py-20 px-6 max-w-3xl mx-auto text-center" data-aos="fade-up">
     <h2 class="text-3xl font-semibold mb-4">Tentang CiwAI™</h2>
     <p class="text-gray-700 text-lg leading-relaxed">
-      CiwAI™ adalah tim digital kreatif penuh semangat dari Indonesia yang membangun teknologi pintar, ringan,
-      cerdas, dan
-      ramah pengguna. Kami fokus pada pengembangan aplikasi Android/iOS, pengembangan website, server VPS/VPN, dan
-      bot AI
-      custom.
+      CiwAI™ adalah tim digital kreatif dari Indonesia yang membangun teknologi pintar, ringan, dan ramah pengguna.
+      Kami fokus pada pengembangan aplikasi Android/iOS, pengembangan website, solusi server pribadi VPS/VPN,
+      dan bot AI kustom.
     </p>
   </section>
 
   <!-- Visi -->
-  <section id="vision" class="py-24 px-6 bg-gradient-to-br from-[#e0f2f1] to-[#f0fdfa] text-center" data-aos="fade-up">
+  <section id="vision" class="py-24 px-6 bg-[#f9fafb] text-center" data-aos="fade-up">
     <h2 class="text-3xl md:text-4xl font-bold mb-6">Visi Kami</h2>
     <p class="max-w-3xl mx-auto text-gray-700 text-lg leading-relaxed">
-      Di CiwAI™, kami percaya bahwa teknologi seharusnya sederhana, memberdayakan, dan dapat diakses oleh siapa
-      saja —
-      mulai dari pelosok desa hingga kota pintar.
+      Di CiwAI™, kami percaya teknologi harus sederhana, memberdayakan, dan mudah diakses oleh siapa saja — dari pelosok
+      desa hingga kota pintar.
       <br /><br />
-      Visi kami adalah menjadi mitra digital terpercaya, membangun teknologi ringan, sistem pribadi, dan solusi
-      intuitif
-      yang membuat pekerjaan sehari-hari menjadi lebih mudah dan cerdas.
+      Visi kami adalah menjadi mitra digital terpercaya, membangun alat ringan, sistem privat, dan solusi intuitif
+      yang membuat pekerjaan sehari-hari menjadi lebih cerdas, bukan lebih rumit.
     </p>
   </section>
 
@@ -90,61 +135,64 @@
       <div class="bg-white rounded-xl p-6 shadow-xl transform hover:scale-105 transition duration-300"
         data-aos="zoom-in">
         <h3 class="text-xl font-semibold mb-2">Aplikasi Mobile</h3>
-        <p>Kami membangun aplikasi modern Android/iOS seperti WaaAi™, tools jaringan, dan lainnya.</p>
+        <p>Kami membangun aplikasi Android/iOS modern seperti WaaAi™, tools jaringan, dan lainnya.</p>
       </div>
       <div class="bg-white rounded-xl p-6 shadow-xl transform hover:scale-105 transition duration-300"
         data-aos="zoom-in" data-aos-delay="100">
         <h3 class="text-xl font-semibold mb-2">Desain Web & Hosting</h3>
-        <p>Website ringan dan bersih dengan hosting yang aman dan dapat diskalakan.</p>
+        <p>Website ringan dan bersih dengan hosting yang aman serta dapat diskalakan.</p>
       </div>
       <div class="bg-white rounded-xl p-6 shadow-xl transform hover:scale-105 transition duration-300"
         data-aos="zoom-in" data-aos-delay="200">
         <h3 class="text-xl font-semibold mb-2">Server VPS & VPN</h3>
-        <p>Solusi server pribadi yang disesuaikan untuk kebutuhan bisnis atau privasi.</p>
+        <p>Solusi server privat yang disesuaikan untuk kebutuhan bisnis maupun privasi.</p>
       </div>
       <div class="bg-white rounded-xl p-6 shadow-xl transform hover:scale-105 transition duration-300"
         data-aos="zoom-in" data-aos-delay="300">
         <h3 class="text-xl font-semibold mb-2">Bot AI</h3>
-        <p>Bot Telegram dan WhatsApp untuk otomatisasi dan bantuan digital.</p>
+        <p>Bot Telegram dan WhatsApp untuk otomasi dan dukungan digital.</p>
       </div>
     </div>
   </section>
 
-  <!-- Project Kami -->
-  <section id="projects" class="py-20 px-6 bg-gradient-to-b from-[#fefce8] to-[#fef9c3] text-center">
-    <h2 class="text-3xl md:text-4xl font-bold mb-10" data-aos="fade-up">🚀 Project Kami</h2>
+  <!-- Proyek Kami -->
+  <section id="projects" class="py-20 px-6 bg-gradient-to-br from-[#e0f2f1] to-[#f0fdfa] text-center">
+    <h2 class="text-3xl md:text-4xl font-bold mb-10" data-aos="fade-up">🚀 Proyek Kami</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto" data-aos="fade-up">
 
       <!-- AllNetTools -->
       <div class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105">
         <h3 class="text-xl font-semibold mb-2">AllNetTools</h3>
-        <p class="text-gray-600 mb-4 text-sm">Aplikasi Android berisi tools jaringan lengkap seperti ping,
-          port scanning,
-          speedtest, dan lainnya.</p>
-        <a href="https://drive.google.com/uc?export=download&id=1fIU3FQEwCmx7eQ8IzXQnfFHQsC2UufeI"
-          class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
-          📥 Unduh APK
+        <p class="text-gray-600 mb-4 text-sm">
+          Aplikasi Android berisi tools jaringan seperti ping, traceroute, speed test, dan lainnya.
+        </p>
+        <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa"
+          class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm"
+          target="_blank" rel="noopener noreferrer">
+          📥 Download APK
         </a>
       </div>
 
       <!-- GarageCars -->
       <div class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105">
         <h3 class="text-xl font-semibold mb-2">GarageCars</h3>
-        <p class="text-gray-600 mb-4 text-sm">Aplikasi kelola inventaris mobil showroom secara fleksibel dengan fitur
-          pelaporan terintegrasi.
+        <p class="text-gray-600 mb-4 text-sm">
+          Aplikasi kelola inventaris mobil showroom yang fleksibel, powerful, dan siap diskalakan.
         </p>
         <a href="https://drive.google.com/uc?export=download&id=1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-"
-          class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
-          📥 Unduh APK
+          class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm"
+          target="_blank" rel="noopener noreferrer">
+          📥 Download APK
         </a>
       </div>
 
       <!-- Website SKH -->
       <div class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105">
-        <h3 class="text-xl font-semibold mb-2">Website SKH JA</h3>
-        <p class="text-gray-600 mb-4 text-sm">Website modern untuk sekolah — ringan, responsif, dan mudah diakses.
+        <h3 class="text-xl font-semibold mb-2">Website SKH Jannatul Aulad</h3>
+        <p class="text-gray-600 mb-4 text-sm">
+          Website modern untuk sekolah — ringan, responsif, dan mudah diakses.
         </p>
-        <a href="target="_blank"
+        <a href="https://jannatulaulad.netlify.app/" target="_blank" rel="noopener noreferrer"
           class="inline-block bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition text-sm">
           🌐 Lihat Website
         </a>
@@ -155,72 +203,65 @@
         class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105 opacity-80">
         <h3 class="text-xl font-semibold mb-2">SayurIn™</h3>
         <p class="text-gray-600 mb-3 text-sm leading-snug">
-          <strong>
-            ⚠️<br />
-            Masih dalam proses pengembangan.
-          </strong>
+          <strong>⚠️ Masih dalam proses pengembangan.</strong>
         </p>
         <button disabled class="inline-block bg-gray-400 text-white px-4 py-2 rounded-lg text-sm cursor-not-allowed">
           🔧 Coming Soon
         </button>
       </div>
 
-      <!-- ...... (Sedang Dikembangkan) -->
+      <!-- Placeholder -->
       <div
         class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105 opacity-80">
         <h3 class="text-xl font-semibold mb-2">Coming Soon App</h3>
         <p class="text-gray-600 mb-3 text-sm leading-snug">
-          <strong>
-            ⚠️<br />
-            Masih dalam proses pengembangan.
-          </strong>
+          <strong>⚠️ Masih dalam proses pengembangan.</strong>
         </p>
         <button disabled class="inline-block bg-gray-400 text-white px-4 py-2 rounded-lg text-sm cursor-not-allowed">
           🔧 Coming Soon
         </button>
       </div>
 
-      <!-- ..... (Sedang Dikembangkan) -->
+      <!-- Placeholder -->
       <div
         class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105 opacity-80">
         <h3 class="text-xl font-semibold mb-2">Coming Soon App</h3>
         <p class="text-gray-600 mb-3 text-sm leading-snug">
-          <strong>
-            ⚠️<br />
-            Masih dalam proses pengembangan.
-          </strong>
+          <strong>⚠️ Masih dalam proses pengembangan.</strong>
         </p>
         <button disabled class="inline-block bg-gray-400 text-white px-4 py-2 rounded-lg text-sm cursor-not-allowed">
           🔧 Coming Soon
         </button>
       </div>
-  </section>
-
-  </div>
+    </div>
   </section>
 
   <!-- Kontak -->
-  <section id="contact" class="py-24 px-6 text-center bg-gradient-to-br from-[#e0f7fa] to-[#e0f2f1]" data-aos="fade-up">
+  <section id="contact" class="py-24 px-6 text-center bg-[#cbd5e1]" data-aos="fade-up">
     <h2 class="text-4xl font-bold mb-4">☕ Ayo Ngobrol!</h2>
     <p class="text-gray-700 max-w-xl mx-auto mb-8">
-      Punya ide, project, atau sekadar mau kenalan?
-      Kami terbuka untuk kolaborasi, pengembangan aplikasi pilihan, dan solusi digital lainnya. </p>
+      Punya ide, proyek, atau sekadar mau kenalan?
+      Kami terbuka untuk kolaborasi, pengembangan aplikasi pilihan, dan solusi digital lainnya.
+    </p>
     <div class="text-lg text-gray-800 space-y-2">
-      <p>📩 Email: <strong><a href="mailto:ciwaismartdigital@gmail.com" class="text-indigo-600 hover:underline">
-            ciwaismartdigital@gmail.com</a></strong></p>
+      <p>📩 Email: <strong>
+          <a href="mailto:ciwaismartdigital@gmail.com" class="text-indigo-600 hover:underline">
+            ciwaismartdigital@gmail.com
+          </a></strong>
+      </p>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="mt-auto py-8 bg-gradient-to-tr from-gray-800 to-gray-900 text-white text-xs text-center">
+  <footer class="mt-auto py-8 bg-gradient-to-tr from-gray-800 to-gray-900 text-white text-center">
     <p>&copy; 2025 CiwAI™ Smart Digital. Seluruh hak cipta dilindungi.</p>
   </footer>
 
   <!-- Tombol WhatsApp -->
-  <a href="https://wa.me/6282260383973" target="_blank"
+  <a href="https://wa.me/6282260383973" target="_blank" rel="noopener noreferrer" aria-label="Buka WhatsApp CiwAI"
     class="block md:hidden fixed bottom-5 right-5 z-50 animate-bounce">
     <div class="bg-green-500 p-4 rounded-full shadow-lg hover:bg-green-600 transition transform hover:scale-110">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 32 32" class="w-6 h-6">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 32 32" class="w-6 h-6" aria-hidden="true">
         <path d="M16 .3C7.3.3.2 7.4.2 16.1c0 2.8.7 5.5 2.1 7.9L0 32l8.2-2.1c2.3 1.2 4.9 1.8 7.5 1.8
         8.7 0 15.8-7.1 15.8-15.9S24.7.3 16 .3zm0 29.3c-2.4 0-4.8-.6-6.9-1.8l-.5-.3-4.9 1.3
         1.3-4.8-.3-.5c-1.2-2.1-1.9-4.5-1.9-6.9 0-7.5 6.1-13.6 13.6-13.6
@@ -239,25 +280,21 @@
   </a>
 
   <!-- Tombol Back to Top -->
-  <button onclick="scrollToTop()" id="backToTopBtn"
+  <button onclick="scrollToTop()" id="backToTopBtn" aria-label="Kembali ke atas"
     class="hidden fixed top-1/2 right-2 transform -translate-y-1/2 z-50 bg-white/40 hover:bg-white/60 backdrop-blur-sm text-blue-800 hover:text-blue-900 p-3 rounded-full shadow-md transition duration-300 border border-white/50">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd"
         d="M10 4a1 1 0 01.894.553l5 10a1 1 0 01-1.788.894L10 6.618 5.894 15.447a1 1 0 01-1.788-.894l5-10A1 1 0 0110 4z"
         clip-rule="evenodd" />
     </svg>
   </button>
 
-  <!-- Tailwind Config (sebelum script lainnya) -->
+  <!-- Tailwind Config -->
   <script>
     tailwind.config = {
-      theme: {
-        extend: {},
-      },
+      theme: { extend: {} },
       plugins: [],
-      corePlugins: {
-        backdropBlur: true,
-      },
+      corePlugins: { backdropBlur: true }
     }
   </script>
 
@@ -266,26 +303,16 @@
 
   <!-- Script Section -->
   <script>
-    // ✅ Init AOS (Animate On Scroll)
-    AOS.init({
-      duration: 800,
-      once: true,
-    });
+    // Init AOS (Animate On Scroll)
+    AOS.init({ duration: 800, once: true });
 
-    // ✅ Scroll-to-top button logic
+    // Scroll-to-top button logic
     const backToTopBtn = document.getElementById("backToTopBtn");
-
     window.addEventListener("scroll", () => {
-      if (window.scrollY > 300) {
-        backToTopBtn.classList.remove("hidden");
-      } else {
-        backToTopBtn.classList.add("hidden");
-      }
+      if (window.scrollY > 300) backToTopBtn.classList.remove("hidden");
+      else backToTopBtn.classList.add("hidden");
     });
-
-    function scrollToTop() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
+    function scrollToTop() { window.scrollTo({ top: 0, behavior: 'smooth' }); }
   </script>
 </body>
 
