--- a/index-id.html
+++ b/index-id.html
@@ -2,6 +2,10 @@
 <html lang="id">
 
 <head>
+  <link rel="alternate" hreflang="en" href="https://ciwaidevtools.netlify.app/index.html" />
+  <link rel="alternate" hreflang="id" href="https://ciwaidevtools.netlify.app/index-id.html" />
+  <link rel="alternate" hreflang="x-default" href="https://ciwaidevtools.netlify.app/" />
+
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       // ⚠️ Kalau root situs serve langsung index.html di path "/",
