--- a/index.html
+++ b/index.html
@@ -120,6 +120,47 @@
     }]
   }
   </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "SoftwareApplication",
+        "name": "AllNetTools",
+        "operatingSystem": "Android",
+        "applicationCategory": "UtilitiesApplication",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "downloadUrl": "https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa",
+        "publisher": {
+          "@type": "Organization",
+          "name": "CiwAI™ Smart Digital",
+          "url": "https://ciwaidevtools.netlify.app/"
+        }
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "GarageCars",
+        "operatingSystem": "Android",
+        "applicationCategory": "BusinessApplication",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "downloadUrl": "https://drive.google.com/uc?export=download&id=1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-",
+        "publisher": {
+          "@type": "Organization",
+          "name": "CiwAI™ Smart Digital",
+          "url": "https://ciwaidevtools.netlify.app/"
+        }
+      }
+    ]
+  }
+  </script>
 
   <!-- Smooth Scroll -->
   <style>
